Fixed error in create_models function

--- a/Vertically_Partitioned_SplitNN.ipynb
+++ b/Vertically_Partitioned_SplitNN.ipynb
@@ -1165,8 +1165,8 @@
       "source": [
         "def create_models(partition, input_size, hidden_sizes, output_size):\n",
         "    models = list()\n",
-        "    for i in range(1, partition):\n",
-        "        models.append(nn.Sequential(nn.Linear(int(input_size/partition * i), hidden_sizes[0]),\n",
+        "    for _ in range(1, partition):\n",
+        "        models.append(nn.Sequential(nn.Linear(int(input_size/partition), hidden_sizes[0]),\n",
         "                                    nn.ReLU(),\n",
         "                                    nn.Linear(hidden_sizes[0], hidden_sizes[1]),\n",
         "                                    nn.ReLU()))\n",
