--- a/Vertically_Partitioned_SplitNN.ipynb
+++ b/Vertically_Partitioned_SplitNN.ipynb
@@ -7,7 +7,8 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1gMgLFKkshQ7Hmigh1otIJemr4Drm4mn2",
-      "authorship_tag": "ABX9TyMhwRgSsN82WGZ2+BB1dBDF"
+      "authorship_tag": "ABX9TyN6pBZb+KEjL6Cj04Qy6J4c",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -1003,6 +1004,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nin-ed/Vertically-Partitioned-Split-Learning/blob/master/Vertically_Partitioned_SplitNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "iUbZ9MjlEAlz",
         "colab_type": "text"
       },
@@ -1017,9 +1028,12 @@
         "colab_type": "text"
       },
       "source": [
-        "# Vertically Partitioned Split Learning\n",
+        "# Tutorial - Vertically Partitioned Split Learning\n",
         "\n",
-        "For demonstration of this structure, MNIST model has been split vertically according to the integer assigned to the variable 'partition'."
+        "For demonstration of this structure, MNIST model has been split vertically according to the integer assigned to the variable 'partition'.\n",
+        "\n",
+        "Images have a dimension of [28 x 28]. We will divide the dataset into some batches, in this case we divide it in 64. Then image dimensions will be resolved to [64 x 784] where row denotes the image and column denotes features of that image. Then we will split these 784 features to act like we have separate datasets containing unique features of an image across columns.    \n",
+        "\n"
       ]
     },
     {
@@ -1027,11 +1041,11 @@
       "metadata": {
         "id": "rmMpPyhmEWJj",
         "colab_type": "code",
+        "outputId": "f242506c-1c75-4859-cf18-3dee7d3cab4d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
-        },
-        "outputId": "f242506c-1c75-4859-cf18-3dee7d3cab4d"
+        }
       },
       "source": [
         "import syft, torch\n",
@@ -1039,7 +1053,7 @@
         "from torchvision import datasets, transforms\n",
         "from torch.utils.data import DataLoader"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1285,7 +1299,7 @@
         "trainset = datasets.MNIST('/content/sample_data/mnist', download=True, train=True, transform=transform)\n",
         "trainloader = DataLoader(trainset, batch_size=64, shuffle=True)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1450,7 +1464,12 @@
         "distr = int(input_size/partition)   \n",
         "\n",
         "for image, label in trainloader:\n",
+        "\n",
+        "    \"\"\"Here we will set the image to [64 x 784] and split columns so that each\n",
+        "       list contains unique features for each batch of images which are\n",
+        "       arranged row-wise.\"\"\" \n",
         "    image = image.view(image.shape[0], -1)\n",
+        "\n",
         "    image_set1.append(image[:, 0:distr])\n",
         "    image_set2.append(image[:, distr:distr*2])\n",
         "    image_set3.append(image[:, distr*2:])\n",
@@ -1607,7 +1626,7 @@
         "    else:\n",
         "        print(f\"Epoch: {i+1}... Training Loss: {total_loss/len(image_set1)}\")"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
