--- a/Extended_Vanilla_SplitNN.ipynb
+++ b/Extended_Vanilla_SplitNN.ipynb
@@ -36,7 +36,7 @@
         "\n",
         "Extended Vanilla Split Learning is basically a combination of multi-layer splitnn and vertically partitioned data. Here all our partitioned input data goes to one location and labels to another location. But instead of just training our model in two locations we can use few trusted locations having more complex model through which we can train our model.\n",
         "\n",
-        "![alt text]\n",
+        "![alt text](https://media.arxiv-vanity.com/render-output/2178060/Supplem1.png)\n",
         "\n"
       ]
     },
